
2012-04-26: Version 0.0.6
- send upstart signals for every plugin on startup and stopping

2012-04-26: Version 0.0.6a
- use a DBus method call for Upstart, not a DBus signal

2012-04-28: Version 0.0.6b
- emit only one Upstart event for all plugins

2012-05-02: Version 0.0.6c
- emit Upstart signal only if activated and send a SIGSTOP

2012-05-13: Version 0.0.6d
- if dbus disconnects try to reconnect to system bus

2012-05-15: Version 0.0.6e
- add support for getting/setting plugin parameters in the setup.conf

2012-05-23: Version 0.0.6f
- correct parameter parsing of epg.PutEntry and remote.AskUser

2012-05-23: Version 0.0.6g
- add "Del" to setup interface

2012-05-23: Version 0.0.7
- output all plugin settings with setup.List
- delete all plugin settings with "Del plugin.*"

2012-06-06: Version 0.0.7a
- extend "ConfirmShutdown" with an "ignore user" parameter

2012-06-14: Version 0.0.7b
- refactor connection handling
- waiting for "NameAcquired" before sending signals

2012-06-20: Version 0.0.7c
- call dbus_threads_init_default, since connection shall be used by multiple threads

2012-06-27: Version 0.0.7d
- add NextWakeupTime to Setup interface
- add ManualStart to Shutdown interface

2012-07-04: Version 0.0.7e
- fix value range test in setup.Set for int32
- add support for getting all values from setup.conf
- add support for storing arbitrary values in setup.conf

2012-07-05: Version 0.0.7f
- fix a memory leak in setup.Set
- fix a bug while setting unsupported values in setup.Set

2012-07-12: Version 0.0.8
- fix the dbus main loop

2012-07-24: Version 0.0.8a
- add SetUserInactive to shutdown interface

2012-09-26: Version 0.0.8b
- add List to plugin interface

2012-11-07: Version 0.0.8c
- add vdr-instance-id to destination name

2012-11-25: Version 0.0.8d
- add SwitchChannel to remote interface
- refactoring of message handling, it's now simpler to add new methods
- add channel interface
- add List to channel interface